<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:titleTextColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="@dimen/hh_action_bar_height"
            android:background="@color/colorPrimary"
            app:theme="@style/Toolbar.Light"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.appcompat.widget.SwitchCompat
            style="@style/config_switch"
            android:id="@+id/developSwitch"
            android:checked="true"
            android:text="@string/is_develop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>

        <TextView
            android:id="@+id/title_user_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/user_token"
            app:layout_constraintEnd_toStartOf="@id/user_token"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/developSwitch" />

        <EditText
            android:id="@+id/user_token"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/tip_input_user_token"
            app:layout_constraintBaseline_toBaselineOf="@id/title_user_token"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            android:inputType="text"
            android:autofillHints="@string/use_default_user_token"
            app:layout_constraintStart_toEndOf="@id/title_user_token" />

        <Button
            android:id="@+id/use_default_user_token"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/use_default_user_token"
            app:layout_constraintStart_toStartOf="@id/title_user_token"
            app:layout_constraintTop_toBottomOf="@id/user_token" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/button_login"
            app:layout_constraintStart_toEndOf="@id/use_default_user_token"
            app:layout_constraintTop_toBottomOf="@id/user_token"
            android:layout_marginStart="15dp"/>


        <Button
            android:id="@+id/direct_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/button_direct_call"
            app:layout_constraintStart_toStartOf="@id/title_user_token"
            app:layout_constraintTop_toBottomOf="@id/login_button"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>